# Spec-Driven-Development

Hackathon_0/Gold/: .env.example  .gitignore  LICENSE  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml  requirements.txt
Hackathon_0/Gold/.claude/skills/: social-summary  social-summary.md
Hackathon_0/Gold/.claude/skills/ceo-briefing/: SKILL.md
Hackathon_0/Gold/.claude/skills/social-poster/: QUICK_REFERENCE.md  SKILL.md
Hackathon_0/Gold/.claude/skills/vault-manager/: skill.md
Hackathon_0/Gold/.qwen/skills/ceo-briefing/: SKILL.md
Hackathon_0/Gold/.qwen/skills/social-poster/: QUICK_REFERENCE.md  SKILL.md
Hackathon_0/Gold/.qwen/skills/vault-manager/: SKILL.md
Hackathon_0/Gold/AI_Employee_Vault/: Dashboard.md  orchestrator.py
Hackathon_0/Gold/AI_Employee_Vault/email_sender/: README.md  send_email_tasks.py
Hackathon_0/Gold/AI_Employee_Vault/mcp_servers/browser/: README.md
Hackathon_0/Gold/AI_Employee_Vault/mcp_servers/email/: README.md
Hackathon_0/Gold/AI_Employee_Vault/mcp_servers/extra/: INSTAGRAM_LOCAL_UPLOAD.md  INSTAGRAM_LOCAL_UPLOAD_GUIDE.md  SETUP.md  SETUP_TEMPORARY_SERVER.md  SKILL_UPDATE_SUMMARY.md  TEMPORARY_SERVER_SUMMARY.md  package.json  post_instagram_from_local.py  reply_facebook_comment.py
Hackathon_0/Gold/AI_Employee_Vault/mcp_servers/odoo/: CEO_BRIEFING_INTEGRATION.md  QUICKSTART.md  README.md  example_usage.py  server.py  test_connection.py
Hackathon_0/Gold/AI_Employee_Vault/mcp_servers/social_media/: README.md  requirements.txt  (+1 more)
Hackathon_0/Gold/AI_Employee_Vault/scripts/: setup.py  social_summary_generator.py  test_system.py
Hackathon_0/Gold/AI_Employee_Vault/vault/: .linkedin_state.json  Business_Goals.md  Company_Handbook.md  Dashboard.md  social_media_log.txt
Hackathon_0/Gold/AI_Employee_Vault/watchers/: base_watcher.py  debug_whatsapp.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  odoo_watcher.py  social_media_watcher.py  whatsapp_watcher_simple.py
Hackathon_0/Gold/guide/: QUICKSTART.md
Hackathon_2/Todo app/: .gitignore  README.md  pyproject.toml
Hackathon_2/Todo app/.specify/memory/: constitution.md
Hackathon_2/Todo app/specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackathon_2/Todo app/src/cli/: main.py
Hackathon_2/Todo app/src/models/: todo.py
Hackathon_2/Todo app/src/services/: todo_service.py
(+830 files in other folders)
