[project]
name = "ai-employee-gold"
version = "1.0.0"
description = "Gold Tier Personal AI Employee - Autonomous FTE for business and personal management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = ["ai", "automation", "claude-code", "obsidian", "agent", "fte"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.110.0",
    "playwright>=1.40.0",
    "facebook-sdk>=3.1.0",
    "tweepy>=4.14.0",
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "watchdog>=3.0.0",
    "markdown>=3.5.1",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-employee-gold"
Documentation = "https://github.com/yourusername/ai-employee-gold#readme"
Repository = "https://github.com/yourusername/ai-employee-gold"
Issues = "https://github.com/yourusername/ai-employee-gold/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["AI_Employee_Vault"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
